--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Custom properties/variables */
 :root {
     --main-white: #f0f0f0;
     --main-red: #be3144;
@@ -5,6 +6,7 @@
     --main-grey: #303841;
 }
 
+/* Base reset/box sizing and font sizing */
 html {
     box-sizing: border-box;
     font-size: 62.5%;
@@ -40,3 +42,19 @@ html {
     }
 }
 
+/* Base styles */
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem; /* 18px */
+    font-weight: 400;
+    line-height: 1.4;
+    color: var(--main-white);
+}
+
+h1,
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
